# Offensive_Tool_Locator

./: README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml
offensv_tool_locator/: db.py  offensive_tool_locator.py  offensive_tool_locator_program.py
tests/: test_offensv_tool_locator.py
